--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <script language="javascript" src="libraries/p5.sound.js"></script> -->
     <script language="javascript" src="sketch.js"></script>
     <script language="javascript" src="box.js"></script>
+    <script language="javascript" src="circle.js"></script>
+    <script language="javascript" src="boundary.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
   </head>
 
