--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,70 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <h2>CtxMenu Example</h2>
+    <p>Right click anywhere on this page to bring up the context menu.</p>
+    <br />
+    <div
+      id="CustomContextMenu"
+      style="background:#6cc9d8;width:300px;height:50px;"
+    >
+      <p>This div has a special context menu</p>
+    </div>
+    <br /><br />
+    <a href="https://github.com/nils-soderman/CtxMenu-Javascript"
+      >GitHub Page</a
+    >
+  </body>
+
+  <!-- Load the plugin -->
+  <script src="../CtxMenu/CtxMenu.js"></script>
+
+  <script>
+    //  -  -  -  -  -  -  -  -  //
+    //     Example Menu One     //
+    //  -  -  -  -  -  -  -  -  //
+
+    // Our function to be called when the user selects "Hello World!" in the custom context menu.
+    function ContextMenuExampleFunction() {
+      alert('Hello World!');
+    }
+
+    // Initialize a context menu for the entire page
+    var contextMenu = CtxMenu();
+
+    // Add our custom function to the menu
+    contextMenu.addItem('Hello World', ContextMenuExampleFunction);
+
+    // Add a seperator
+    contextMenu.addSeperator();
+
+    // Add a second item to the menu, this time with an icon
+    contextMenu.addItem(
+      'Reload Page',
+      function() {
+        location.reload();
+      },
+      (Icon = 'icon.png')
+    );
+
+    //  -  -  -  -  -  -  -  -  //
+    //      Example Menu Two    //
+    //  -  -  -  -  -  -  -  -  //
+
+    // Example function to change the background color of an element
+    // Note that the first argument in a function called from the ctx menu will be the element that was clicked on.
+    function ChangeElementColor(element) {
+      var color = [
+        Math.random() * 255,
+        Math.random() * 255,
+        Math.random() * 255
+      ];
+      element.style.background = 'rgb(' + color + ')';
+    }
+
+    // Initialize a special custom menu for the "CustomContextMenu" div
+    var contextMenuTwo = CtxMenu('#CustomContextMenu');
+    contextMenuTwo.addItem('Change Color', ChangeElementColor);
+  </script>
 </html>
